[package]
name = "osrs-cache"
version = "0.2.2"
edition = "2021"
license = "MIT"
description = "A cache library for the Oldschool Runescape JS5 file system."
repository = "https://github.com/runecore/osrs-cache"
documentation = "https://docs.rs/osrs-cache"
readme = "README.md"
keywords = ["runescape", "osrs"]
exclude = [".gitignore", "data/*"]
categories = ["development-tools", "filesystem"]

[lib]
name = "osrscache"
path = "src/lib.rs"

[dependencies]
rs-cache = "0.8"
thiserror = "1"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
